[package]
name = "serveur"
version = "0.1.0"
edition = "2021"
authors = ["Mathis THOUVENIN <thouvenin.mathis@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
ring = "0.16.20"
rand = "0.8.5"